Added BallBurst and Autocomplete