@@ -1,2 +1,5 @@
 # ap-project
 Color Switch Game - A Basic Implementation in JavaFX, a project for Advanced Programming, Monsoon 2020.
+
+Add controlsfx-8.40.14.jar present in resources/libraries to Libraries.
+Add --add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED to VM Options.
